dashboard/ing-dash.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-local
  namespace: kube-system
  annotations:
    "nginx.ingress.kubernetes.io/force-ssl-redirect": "true"
    "nginx.ingress.kubernetes.io/ssl-passthrough": "true"
    "nginx.ingress.kubernetes.io/backend-protocol": "HTTPS"
spec:
  # ingressClassName: public - optional if you need to specify ingress class
  rules:
  - host: dashboard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
